--- a/CH02_機器學習基礎/CH02_機器學習基礎.ipynb
+++ b/CH02_機器學習基礎/CH02_機器學習基礎.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.1基本概念"
+    "## 2.1 基本概念"
    ]
   },
   {
@@ -82,7 +82,7 @@
     "| :----------------------:| :----------------------:| :----------------------:|\n",
     "| ![](./img/ch2/2.2.4.png)| ![](./img/ch2/2.1/5.jpg)| ![](./img/ch2/2.1/6.jpg)|\n",
     "\n",
-    "|集群分析 (Cluster Analysis)|關聯規則學習 (Association rule learning)|神經網絡 (Neural Network)|\n",
+    "|集群分析 (Cluster Analysis)|關聯規則學習 (Association Rule Learning)|神經網絡 (Neural Network)|\n",
     "| :----------------------:| :----------------------:| :-----------------------:|\n",
     "| ![](./img/ch2/2.1/7.jpg)| ![](./img/ch2/2.2.8.png)| ![](./img/ch2/2.2.09.png)|\n",
     "\n",
@@ -180,62 +180,137 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 2.2 機器學習學習方式"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "根據數據類型的不同，每個問題的建模都會有不同的方式來依據不同的學習方式和輸入數據，機器學習主要分為以下學習方式："
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 2.2.1 監督式學習 (Supervised Learning)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "數據：監督學習是使用已知正確答案的示例來訓練網絡。<br>\n",
+    "定義：已知數據和其對應的標籤，訓練一個預測模型，將輸入數據映射到標籤的過程。<br>\n",
+    "常見應用場景：監督式學習的常見應用場景如 分類問題 (Classification) 和 回歸問題 (Regression)。<br>\n",
+    "\n",
+    "常見算法：\n",
+    "- Support Vector Machine (SVM)<br>\n",
+    "- Naive Bayes<br>\n",
+    "- Logistic Regression<br>\n",
+    "- K-Nearest Neighborhood (KNN)<br>\n",
+    "- Decision Tree<br>\n",
+    "- Random Forest<br>\n",
+    "- AdaBoost<br>\n",
+    "- Linear Discriminant Analysis (LDA)\n",
+    "\n",
+    "深度學習(Deep Learning) 大多也是以監督學習的方式呈現。"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 2.2.2 非監督式學習 (Unsupervised Learning)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "數據：在非監督式學習中，數據並不一定有標示<br>\n",
+    "定義：適用於有數據集但無標籤的情況。此學習模型是為了替換找出數據的一些內在結構。<br>\n",
+    "常見應用場景：通用的應用場景包括 Association Rule Learning 的學習以及聚類分析 (Cluster Analysis)等。<br>\n",
+    "\n",
+    "常見算法：\n",
+    "- Apriori<br>\n",
+    "- K-Means<br>"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 2.2.3 半監督式學習 (Semi-supervised Learning)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "數據：在此學習方式下，輸入數據部分被標記、部分沒有，這種學習模型可以進行預測。<br>\n",
+    "常見應用場景：應用場景包括分類和回歸，算法包括一些針對常用 Supervised Learning 的延伸，通過對已標記數據建模，接此在此基礎上對未標記數據進行預測。<br>\n",
+    "\n",
+    "常用算法：\n",
+    "- 論證推理算法（圖論）<br>\n",
+    "- Laplace SVM<br>"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 2.2.4 弱監督式學習"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "特色：弱監督學習可以看做是有多個標記的數據集合，次集合可以是空集，個別元素，或包含多種情況（沒有標記，有一個標記，和有多個標記）的多個數據集的標籤是不可靠的，這裡的不可靠可以是標記不正確，多種標記，標記不充分，局部標記等。已知數據和其一一對應的弱標籤，訓練一個智能算法，將輸入數據映射到一組更強的標籤的過程。標籤的強弱指的是標籤蘊含的信息量的多少，而相對於分割的標籤來說，分類的標籤就是弱標籤。\n",
+    "\n",
+    "算法演算：重新計算，得到一張包含氣球的圖片，需要重新獲得氣球在圖片中的位置及氣球和背景的分割線，這就是已知的弱標籤學習強標籤的問題。\n",
+    "\n",
+    "在企業數據應用的場景下，人們最常見的可能是監督式學習和非監督式學習的模型。在圖像識別等領域，由於存在大量的非標識的數據和少量的可標識數據，目前半監督式學習是一個很熱的話題。"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 2.2.5監督學習有哪些步驟"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "監督學習是使用已知正確答案的示例來訓練網絡，每組訓練數據有一個明確的標識或結果。想像一下，我們可以訓練一個網絡，讓其從照片庫中（其中包含氣球的照片）識別出氣球的照片。以下就是我們在這個假設場景中所要採取的步驟。\n",
+    "\n",
+    "**步驟1：數據集的創建和分類**\n",
+    "首先，瀏覽你的照片（數據集），確定所有包含氣球的照片，並進行進行標註。然後，將所有照片分為訓練集和驗證集。目標就是在深度網絡中找一個函數，這個函數輸入是任意一張照片，當照片中包含氣球時，輸出1，否則輸出0。\n",
+    "\n",
+    "**步驟2：數據增強（數據增強）**\n",
+    "當原始數據蒐集和標註完畢，一般蒐集的數據並不一定包含目標在各種擾動下的信息。數據的好壞對於機器學習模型的預測能力至關重要，因此一般會進行數據增強。數據來說，數據增強一般包括，圖像旋轉，平移，顏色變換，裁剪，仿射變換等。\n",
+    "\n",
+    "**步驟3：特徵工程（特徵工程）**\n",
+    "常見的手工特徵（手工製作的特徵）有尺度不變特徵變換（Scale-Invariant Feature Transform，SIFT），方向梯度直方圖（Oriented Gradient， HOG）等。由於手工特徵是啟發式的，其算法設計背後的出發點不同，將這些特徵組合在一起的時候有可能會產生衝突，如何將組合特徵的性能發揮出來，使原始數據在特徵空間中在深度學習方法大獲成功之後，人們很大一部分不再關注特徵工程本身。因為，最常用到的捲積神經網絡（卷積神經網絡， CNNs）本身就是一種特徵提取和選擇的引擎。研究者提出的不同的網絡結構，正則化，歸一化方法實際上就是深度學習背景下的特徵工程。\n",
+    "\n",
+    "**步驟4：建立預測模型和損失**\n",
+    "將原始數據映射到特徵空間之後，也就意味著我們得到了比較合理的輸入。然後就是適當的預測模型得到對應的輸入的輸出。而如何保證模型的輸出和輸入標籤的一致性，就需要優化模型預測和標籤之間的損失函數，常見的損失函數（損失函數）有交叉熵，均方差等。通過優化方法不斷迭代，使模型從最初的初始化狀態一步步變化為有預測能力的模型的過程，實際上就是學習的過程。\n",
+    "\n",
+    "**步驟5：訓練**\n",
+    "選擇合適的模型和超參數進行初始化，其中超參數設置支持矢量機中核函數，誤差項懲罰權重等。當模型初始化參數設置好後，將製作好的特徵數據輸入到模型，通過合適的優化方法不斷縮小輸出與標籤之間的差異，當交替過程到了終止條件，就可以得到訓練好的模型。優化方法最常見的就是漸變下降法及其變種，使用梯度下降法的替代是優化目標函數針對模型是可導的。\n",
+    "\n",
+    "**步驟6：驗證和模型選擇**\n",
+    "訓練完訓練集圖片後，需要進行模型測試。利用驗證集來驗證模型是否可以準確地挑選出含有氣球內部的照片。\n",
+    "在此過程中，通常會通過調整和模型相關的各種事物（超參數）來重複步驟2和3，其中里面有多少個節點，有多少層，使用怎樣的激活函數和損失函數，如何在反向傳播階段積極有效地訓練權值等等。\n",
+    "\n",
+    "**步驟7：測試及應用**\n",
+    "當有了一個準確的模型，就可以通過模型部署到您的應用程序中。您可以將預測功能發佈為API（應用編程接口，應用程序編程接口）調用，並且您可以從軟件中調用該API，從而進行推理並提供相應的結果。"
+   ]
   },
   {
    "cell_type": "markdown",
